fix: :bug: add padding to dropdown for spacing

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -123,6 +123,7 @@
 
     &__dropdown {
         display: none;
+        padding: 15px;
         position: absolute;
         top: 100%;
         left: 0;
